добавила обработку ситуаций