@@ -1,7 +1,12 @@
 package kg.attractor.jobsearch.service.Impl;
 
+import io.micrometer.observation.ObservationFilter;
 import kg.attractor.jobsearch.dao.UserDao;
+import kg.attractor.jobsearch.dao.VacancyDao;
+import kg.attractor.jobsearch.dto.ResumeDto;
 import kg.attractor.jobsearch.dto.UserDto;
+import kg.attractor.jobsearch.dto.VacancyDto;
+import kg.attractor.jobsearch.entity.Resume;
 import kg.attractor.jobsearch.model.User;
 import kg.attractor.jobsearch.service.UserService;
 import lombok.RequiredArgsConstructor;
@@ -16,6 +21,7 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class UserServiceImpl implements UserService {
     private final UserDao userDao;
+    private final VacancyDao vacancyDao;
 
     @Override
     public List<UserDto> getAllUser() {
@@ -29,8 +35,11 @@ public class UserServiceImpl implements UserService {
                 .map(e -> UserDto.builder()
                         .id(e.getId())
                         .name(e.getName())
+                        .surname(e.getSurname())
+                        .password(e.getPassword())
                         .email(e.getEmail())
-                        .number(e.getPhoneNumber())
+                        .phoneNumber(e.getPhoneNumber())
+                        .age(e.getAge())
                         .build())
                 .collect(Collectors.toList());
     }
@@ -40,10 +49,15 @@ public class UserServiceImpl implements UserService {
         User user = userDao.findUserByName(name)
                 .orElseThrow(() -> new RuntimeException("User not found"));
         return UserDto.builder()
+                .id(user.getId())
                 .name(user.getName())
-                .number(user.getPhoneNumber())
+                .surname(user.getSurname())
+                .password(user.getPassword())
                 .email(user.getEmail())
+                .phoneNumber(user.getPhoneNumber())
+                .age(user.getAge())
                 .build();
+
     }
 
 
@@ -54,91 +68,96 @@ public class UserServiceImpl implements UserService {
         return UserDto.builder()
                 .id(user.getId())
                 .name(user.getName())
-                .number(user.getPhoneNumber())
+                .surname(user.getSurname())
+                .password(user.getPassword())
                 .email(user.getEmail())
+                .phoneNumber(user.getPhoneNumber())
+                .age(user.getAge())
                 .build();
+
     }
 
     @Override
     public UserDto getUserByPhoneNumber(String phoneNumber) {
-        return null;
-    }
-
-    @Override
-    public UserDto getUserByPhoneNumber(int phoneNumber) {
-        User user = userDao.findUserByNumber(phoneNumber)
-                .orElseThrow(() -> new RuntimeException("User not found"));
+        UserDto user = userDao.findUserByNumber(phoneNumber);
         return UserDto.builder()
                 .id(user.getId())
                 .name(user.getName())
-                .number(user.getPhoneNumber())
+                .surname(user.getSurname())
+                .password(user.getPassword())
                 .email(user.getEmail())
+                .phoneNumber(user.getPhoneNumber())
+                .age(user.getAge())
                 .build();
+
+    }
+
+    @Override
+    public boolean checkUserExistsByEmail(String email) {
+        return false;
     }
 
     @Override
     public List<UserDto> getResumesByCategory(String category) {
-        List<User> list = userDao.findResumesByCategory(category);
-        return list.stream()
-                .map(e -> UserDto.builder()
-                        .id(e.getId())
-                        .name(e.getName())
-                        .email(e.getEmail())
-                        .number(e.getPhoneNumber())
-                        .build())
-                .collect(Collectors.toList());
+        return List.of();
     }
+
     @Override
     public List<UserDto> getJobsByCategory(String category) {
-        List<User> list = userDao.findJobsByCategory(category);
-        return list.stream()
-                .map(e -> UserDto.builder()
-                        .id(e.getId())
-                        .name(e.getName())
-                        .email(e.getEmail())
-                        .number(e.getPhoneNumber())
-                        .build())
-                .collect(Collectors.toList());
+        return List.of();
+    }
+
+
+
+    @Override
+    public List<VacancyDto> getVacancyByCategory(String categoryId) {
+        return List.of();
     }
 
     @Override
     public List<UserDto> getUserResumes(int userId) {
+        return List.of();
+    }
+
+
+    @Override
+    public List<UserDto> getUserAppliedJobs(int userId) {
         List<User> list = userDao.findResumesByUserId(userId);
         return list.stream()
                 .map(e -> UserDto.builder()
                         .id(e.getId())
                         .name(e.getName())
+                        .surname(e.getSurname())
+                        .password(e.getPassword())
                         .email(e.getEmail())
-                        .number(e.getPhoneNumber())
+                        .phoneNumber(e.getPhoneNumber())
+                        .age(e.getAge())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
     }
-    @Override
-    public List<UserDto> getUserAppliedJobs(int userId) {
-        List<User> list = userDao.findAppliedJobsByUserId(userId);
-        return list.stream()
-                .map(e -> UserDto.builder()
-                        .id(e.getId())
-                        .name(e.getName())
-                        .email(e.getEmail())
-                        .number(e.getPhoneNumber())
-                        .build())
-                .collect(Collectors.toList());
-    }
-    @Override
-    public boolean checkUserExistsByEmail(String email) {
-        return userDao.existsByEmail(email);
-    }
+
     @Override
     public List<UserDto> getApplicantsByJobId(int jobId) {
-        List<User> list = userDao.findApplicantsByJobId(jobId);
-        return list.stream()
-                .map(e -> UserDto.builder()
-                        .id(e.getId())
-                        .name(e.getName())
-                        .email(e.getEmail())
-                        .number(e.getPhoneNumber())
-                        .build())
-                .collect(Collectors.toList());
+        return List.of();
+    }
+
+    @Override
+    public void create(UserDto userDto){
+        return;
+    }
+
+    @Override
+    public List<UserDto> getApplicant() {
+        return List.of();
+    }
+
+    @Override
+    public void addUser(UserDto userDto) {
+
+    }
+
+    @Override
+    public ObservationFilter updateUser(int id, UserDto userDto) {
+        return null;
     }
 }
